# groww-review-pulse

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  vercel.json
.github/workflows/: weekly-pulse.yml
config/: groww.yaml  mcp.json.example  pulse.yaml
docs/: ProblemStatement.md  ProblemStatement.txt  architecture.md  deploymentplan2.md  edge-cases.md  implementation-plan.md
frontend/: .env.example  README.md  index.html  package.json  vercel.json  vite.config.ts
frontend/public/data/: reviews_normalized.json
frontend/scripts/: sync-reviews.mjs
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/lib/: env.ts  (+2 more)
pulse/: __init__.py  __main__.py  config.py  data_paths.py  env.py  logging_config.py  run_id.py
pulse/delivery/: __init__.py  delivery_io.py  docs_delivery.py  docs_tools.py  errors.py  gmail_delivery.py  gmail_tools.py  mcp_client.py  models.py
pulse/ingestion/: __init__.py  cache.py  errors.py  models.py  playstore.py  window.py
pulse/ledger/: __init__.py
pulse/preprocess/: __init__.py  cache.py  normalize.py  pii.py  pipeline.py
pulse/reasoning/: __init__.py  cluster.py  embed.py  errors.py  pipeline.py  report_io.py  summarize.py  validate_quotes.py
pulse/render/: __init__.py  doc_report.py  email_teaser.py  errors.py  models.py  payload_io.py  pipeline.py  validate.py
scripts/: schedule_weekly.ps1
tests/: test_cluster.py  test_docs_delivery.py  test_gmail_delivery.py  test_ingestion.py  test_phase0.py  test_pii.py  test_preprocess.py  test_reasoning_pipeline.py  test_render.py  test_validate_quotes.py
(+8 files in other folders)
