[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "groww-review-pulse"
version = "0.1.0"
description = "Automated weekly Groww Play Store review pulse"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "google-play-scraper>=1.2.4",
    "python-dotenv>=1.0",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
reasoning = [
    "sentence-transformers>=3.0",
    "umap-learn>=0.5.6",
    "hdbscan>=0.8.33",
    "groq>=0.11",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-PyYAML>=6.0",
]

[project.scripts]
pulse = "pulse.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pulse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["pulse"]
